--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@varlet/ui": "^3.3.6",
     "ant-design-vue": "^4.1.2",
     "axios": "^1.5.1",
     "d3": "^7.8.5",
